# oop-lab1-refactoring

./: Axe_8cpp.html  Axe_8h.html  Axe_8h_source.html  CMakeLists.txt  Character_8cpp.html  Character_8cpp__incl.dot  Character_8h.html  Character_8h__dep__incl.dot  Character_8h__incl.dot  Character_8h_source.html  CombatState_8cpp.html  CombatState_8cpp__incl.dot  CombatState_8h.html  CombatState_8h__dep__incl.dot  CombatState_8h__incl.dot  CombatState_8h_source.html  ConsoleUI_8cpp.html  ConsoleUI_8cpp__incl.dot  ConsoleUI_8h.html  ConsoleUI_8h__dep__incl.dot  ConsoleUI_8h__incl.dot  ConsoleUI_8h_source.html  Doxyfile  EnemyFactory_8h.html  EnemyFactory_8h__dep__incl.dot  EnemyFactory_8h__incl.dot  EnemyFactory_8h_source.html  Enemy_8cpp.html  Enemy_8cpp__incl.dot  Enemy_8h.html  Enemy_8h__dep__incl.dot  Enemy_8h__incl.dot  Enemy_8h_source.html  EntitiesTests_8cpp.html  EntitiesTests_8cpp__incl.dot  ExplorationState_8cpp.html  ExplorationState_8cpp__incl.dot  ExplorationState_8h.html  ExplorationState_8h__dep__incl.dot  ExplorationState_8h__incl.dot  (+256 more)
.github/workflows/: doxygen.yml
examples/: character_example.cpp  enemy_example.cpp  game_example.cpp  item_example.cpp  logger_example.cpp  player_example.cpp  utils_example.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+65 more)
src/: Game.cpp  Game.h
src/common/: IObserver.h  Logger.h  Utils.h
src/entities/: Character.cpp  Character.h  Enemy.h  EnemyFactory.h  Player.h
src/items/: Axe.h  HealthPotion.h  Item.h  Stick.h  Sword.h  Weapon.h
src/states/: CombatState.cpp  CombatState.h  ExplorationState.cpp  ExplorationState.h  IGameState.h
src/ui/: ConsoleUI.cpp  ConsoleUI.h  IUserInterface.h
src/world/: LocationNode.cpp  LocationNode.h  WorldMap.cpp  WorldMap.h
uml/extra/lab1b-instagram/: GLOSSARY.md
(+35 files in other folders)
